test/e2e/chainsaw/httproute-header-before-weight/assertions/httproute-initial.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httproute-hbw
  namespace: default
spec:
  (length(rules)): 1
  rules:
    - backendRefs:
        - name: httproute-header-before-weight-stable-service
        - name: httproute-header-before-weight-canary-service
          (weight): 0
