test/e2e/chainsaw/httproute-header-before-weight/assertions/rollout-healthy.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: httproute-hbw-rollout
  namespace: default
status:
  (phase == 'Healthy'): true
