test/e2e/chainsaw/httproute-header-before-weight/resources/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httproute-hbw
  namespace: default
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: default
  rules:
    - backendRefs:
        - name: httproute-header-before-weight-stable-service
          port: 80
        - name: httproute-header-before-weight-canary-service
          port: 80
